<resources>
    <string name="app_name">Fuel Choice</string>
    <string name="fuel_consumption">Consumo Km/L</string>
    <string name="search">Buscar</string>
    <string name="liter_value">Valor do litro (R$)</string>
    <string name="calculate">Calcular</string>
    <string name="clear">Limpar</string>
    <string name="result">O mais barato é:</string>
    <string name="fill_all_fields">Preencha todos os campos!</string>
    <string name="select_fuel">Selecione os tipos de combustivel!</string>
</resources>